--- a/charts/spring-petclinic-deploy/Chart.yaml
+++ b/charts/spring-petclinic-deploy/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v2
-name: java-github-example-deploy
+name: spring-petclinic-deploy
 description: >-
-  A helm chart for Kubernetes to deploy the 'java-github-example' application.
+  A helm chart for Kubernetes to deploy the 'spring-petclinic' application.
 type: application
 
 # This is the chart version. This version number should be incremented each time you make changes
