--- a/charts/spring-petclinic-deploy/values-DEV.yaml
+++ b/charts/spring-petclinic-deploy/values-DEV.yaml
@@ -1,4 +1,4 @@
 replicaCount: 1
 image:
   tag: quay.io/aagreen/spring-petclinic@sha256:5353d09fcb15148041bbb70fa657c1c3b84f63747cd12458a6b777c4ca5b4b20 # written by ploigos-step-runner
-  baz: qux
+  baz: zim
