--- a/charts/spring-petclinic-deploy/values.yaml
+++ b/charts/spring-petclinic-deploy/values.yaml
@@ -4,7 +4,7 @@ image:
   pullPolicy: Always
 
 service:
-  name: pc
+  name: petclinic
   type: ClusterIP
   port: 80
   targetport: 8080
@@ -14,7 +14,7 @@ probe:
   livepath:  /
 
 route:
-  name: pc
+  name: petclinic
   enabled: True
   annotations: {
   }
