--- a/charts/spring-petclinic-deploy/templates/external-secrets.yaml
+++ b/charts/spring-petclinic-deploy/templates/external-secrets.yaml
@@ -19,7 +19,7 @@ spec:
     template:
       type: kubernetes.io/dockerconfigjson
       data:
-        {{ .Values.psrSecrets.secretKey }}: |
+        {{ .Values.pullSecret.secretKey }}: |
           `{"auths":{"{{ .registry2Host }}":{"username":"{{ .registry2User }}","password":"{{ .registry2Password }}"}}}`
 
   data:
