moved image pull secret in deployment and more formatting of external secrets

--- a/charts/spring-petclinic-deploy/templates/deployment.yaml
+++ b/charts/spring-petclinic-deploy/templates/deployment.yaml
@@ -23,11 +23,12 @@ spec:
       annotations:
         alwaysRoll: {{ randAlphaNum 5 | quote }}
     spec:
+      imagePullSecrets:
+        - name: {{ .Values.pullSecret.secretName }}
       containers:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
-          imagePullSecret: {{ .Values.pullSecret.secretName }}
           ports:
             - name: http
               containerPort: {{ .Values.service.targetport }}
