--- a/charts/spring-petclinic-deploy/templates/external-secrets.yaml
+++ b/charts/spring-petclinic-deploy/templates/external-secrets.yaml
@@ -20,7 +20,7 @@ spec:
       type: kubernetes.io/dockerconfigjson
       data:
         {{ .Values.pullSecret.secretKey }}: |
-          `{"auths":{"{{ .registry2Host }}":{"username":"{{ .registry2User }}","password":"{{ .registry2Password }}"}}}`
+          {"auths":{"{{`{{ .registry2Host }}`}}":{"username":"{{`{{ .registry2User }}`}}","password":"{{`{{ .registry2Password }}`}}"}}}
 
   data:
     - secretKey: registry2Host
@@ -45,11 +45,10 @@ kind: Secret
 metadata:
   name: {{ .Values.vaultSecret }}
   labels:
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
-    app.kubernetes.io/name: {{ .Values.appName }}
-    app.kubernetes.io/version: {{ .Chart.Version | quote }}
-    helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
+    app: {{ template "application.name" . }}
+    chart: {{ template "application.chart" . }}
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
 type: Opaque
 ---
 apiVersion: external-secrets.io/v1beta1
@@ -57,11 +56,10 @@ kind: SecretStore
 metadata:
   name: {{ .Values.vaultStorage }}
   labels:
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
-    app.kubernetes.io/name: {{ .Values.appName }}
-    app.kubernetes.io/version: {{ .Chart.Version | quote }}
-    helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
+    app: {{ template "application.name" . }}
+    chart: {{ template "application.chart" . }}
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
 spec:
   provider:
     vault:
