update code to not inject pull secret refs if not enabled in values

--- a/charts/spring-petclinic-deploy/templates/deployment.yaml
+++ b/charts/spring-petclinic-deploy/templates/deployment.yaml
@@ -23,8 +23,10 @@ spec:
       annotations:
         alwaysRoll: {{ randAlphaNum 5 | quote }}
     spec:
+      {{- if .Values.pullSecret.enabled }}
       imagePullSecrets:
         - name: {{ .Values.pullSecret.secretName }}
+      {{- end}}
       containers:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.tag }}"
